Håndtere nullpointer i medlemdto